--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,5 +14,5 @@
  *= require_self
  */
 
-@import "bootstrap-sprockets";
-@impotr "bootstrap";
+ @import "bootstrap-sprockets";
+ @import "bootstrap";
